src/ocl/oclParser/OclCS/OclParser.cpp

// Generated from OclParser.g4 by ANTLR 4.13.2


#include "OclParserVisitor.h"

#include "OclParser.h"


using namespace antlrcpp;
using namespace OclCS;

using namespace antlr4;

namespace {

struct OclParserStaticData final {
  OclParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  OclParserStaticData(const OclParserStaticData&) = delete;
  OclParserStaticData(OclParserStaticData&&) = delete;
  OclParserStaticData& operator=(const OclParserStaticData&) = delete;
  OclParserStaticData& operator=(OclParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag oclparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<OclParserStaticData> oclparserParserStaticData = nullptr;

void oclparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (oclparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(oclparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<OclParserStaticData>(
    std::vector<std::string>{
      "expressionInOclCS", "oclExpressionCS", "parentedExpCS", "variableExpCS", 
      "simpleNameCS", "restrictedKeywordCS", "unreservedSimpleNameCS", "pathNameCS", 
      "literalExpCS", "enumLiteralExpCS", "collectionLiteralExpCS", "collectionTypeIdentifierCS", 
      "collectionLiteralPartsCS", "collectionRangeCS", "prefixedExp", "primitiveLiteralExpCS", 
      "tupleLiteralExpCS", "unlimitedNaturalLiteralExpCS", "integerLiteralExpCS", 
      "realLiteralExpCS", "stringLiteralExpCS", "booleanLiteralExpCS", "typeLiteralExpCS", 
      "iteratorExpCS", "iterateExpCS", "variableDeclarationCS", "typeCS", 
      "primitiveTypeCS", "oclTypeCS", "collectionTypeCS", "tupleTypeCS", 
      "operationCallExpCS_A", "operationCallExpCS_B", "propertyCallExpCS_A", 
      "propertyCallExpCS_B", "associationClassCallExpCS_A", "associationClassCallExpCS_B", 
      "isMarkedPreCS", "letExpCS", "oclMessageExpCS", "oclMessageArgumentsCS", 
      "ifExpCS", "nullLiteralExpCS", "invalidLiteralExpCS", "unaryLiteralExpCS", 
      "binaryLiteralExpCS", "packageDeclarationCS", "contextDeclarationCS", 
      "classifierContextDeclCS", "operationContextDeclCS", "propertyContextDeclCS", 
      "defExpressionCS", "invOrDefCS", "initOrDerValueListCS", "initOrDerValueCS", 
      "prePostOrBodyDeclCS", "prePostBodyExpCS", "operationCS"
    },
    std::vector<std::string>{
    },
    std::vector<std::string>{
      "", "COMMENTS", "IF", "THEN", "ELSE", "ENDIF", "IN", "PRE", "LET", 
      "ITERATE", "SELF", "TUPLE", "NULLEXP", "INVALID", "PACKAGE", "ENDPACKAGE", 
      "CONTEXT", "STATIC", "DEF", "INV", "BODY", "POST", "INIT", "DERIVE", 
      "COLLECTION", "BAG", "ORDEREDSET", "SEQUENCE", "SET", "OCLBOOLEAN", 
      "OCLINTEGER", "OCLREAL", "OCLSTRING", "OCLUNLIMITEDNAT", "SEQRANGE", 
      "OCLANY", "OCLINVALID", "OCLMESSAGE", "OCLVOID", "OCLSTATE", "INT", 
      "REAL", "BOOL", "STRING_LITERAL", "COLON", "COLONCOLON", "COMMA", 
      "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
      "RARROW", "LT", "GT", "LTE", "GTE", "ASSIGN", "INEQUAL", "QUESTION", 
      "STAR", "PLUS_ASSIGN", "PLUS", "KEYOR", "KEYAND", "KEYXOR", "IMPLIES", 
      "RANGE", "DOT", "AT", "SLASH", "UNDERSCORE", "DHAT", "HAT", "MINUS", 
      "NOT", "PIPE", "ID", "WS", "ERRCHAR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  oclparserParserStaticData = std::move(staticData);
}

}

OclParser::OclParser(TokenStream *input) : OclParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

OclParser::OclParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  OclParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *oclparserParserStaticData->atn, oclparserParserStaticData->decisionToDFA, oclparserParserStaticData->sharedContextCache, options);
}

OclParser::~OclParser() {
  //delete _interpreter;
}

const atn::ATN& OclParser::getATN() const {
  return *oclparserParserStaticData->atn;
}

std::string OclParser::getGrammarFileName() const {
  return "OclParser.g4";
}

const std::vector<std::string>& OclParser::getRuleNames() const {
  return oclparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& OclParser::getVocabulary() const {
  return oclparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView OclParser::getSerializedATN() const {
  return oclparserParserStaticData->serializedATN;
}


//----------------- ExpressionInOclCSContext ------------------------------------------------------------------

OclParser::ExpressionInOclCSContext::ExpressionInOclCSContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OclParser::OclExpressionCSContext* OclParser::ExpressionInOclCSContext::oclExpressionCS() {
  return getRuleContext<OclParser::OclExpressionCSContext>(0);
}

OclParser::PackageDeclarationCSContext* OclParser::ExpressionInOclCSContext::packageDeclarationCS() {
  return getRuleContext<OclParser::PackageDeclarationCSContext>(0);
}


size_t OclParser::ExpressionInOclCSContext::getRuleIndex() const {
  return OclParser::RuleExpressionInOclCS;
}


std::any OclParser::ExpressionInOclCSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OclParserVisitor*>(visitor))
    return parserVisitor->visitExpressionInOclCS(this);
  else
    return visitor->visitChildren(this);
}

OclParser::ExpressionInOclCSContext* OclParser::expressionInOclCS() {
  ExpressionInOclCSContext *_localctx = _tracker.createInstance<ExpressionInOclCSContext>(_ctx, getState());
  enterRule(_localctx, 0, OclParser::RuleExpressionInOclCS);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(118);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OclParser::IF:
      case OclParser::LET:
      case OclParser::SELF:
      case OclParser::TUPLE:
      case OclParser::NULLEXP:
      case OclParser::INVALID:
      case OclParser::COLLECTION:
      case OclParser::BAG:
      case OclParser::ORDEREDSET:
      case OclParser::SEQUENCE:
      case OclParser::SET:
      case OclParser::OCLBOOLEAN:
      case OclParser::OCLINTEGER:
      case OclParser::OCLREAL:
      case OclParser::OCLSTRING:
      case OclParser::OCLUNLIMITEDNAT:
      case OclParser::OCLANY:
      case OclParser::OCLINVALID:
      case OclParser::OCLMESSAGE:
      case OclParser::OCLVOID:
      case OclParser::INT:
      case OclParser::REAL:
      case OclParser::BOOL:
      case OclParser::STRING_LITERAL:
      case OclParser::LPAREN:
      case OclParser::STAR:
      case OclParser::MINUS:
      case OclParser::NOT:
      case OclParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(116);
        oclExpressionCS(0);
        break;
      }

      case OclParser::EOF:
      case OclParser::PACKAGE:
      case OclParser::CONTEXT: {
        enterOuterAlt(_localctx, 2);
        setState(117);
        packageDeclarationCS();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OclExpressionCSContext ------------------------------------------------------------------

OclParser::OclExpressionCSContext::OclExpressionCSContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OclParser::PrefixedExpContext* OclParser::OclExpressionCSContext::prefixedExp() {
  return getRuleContext<OclParser::PrefixedExpContext>(0);
}

OclParser::OperationCallExpCS_BContext* OclParser::OclExpressionCSContext::operationCallExpCS_B() {
  return getRuleContext<OclParser::OperationCallExpCS_BContext>(0);
}

OclParser::PropertyCallExpCS_BContext* OclParser::OclExpressionCSContext::propertyCallExpCS_B() {
  return getRuleContext<OclParser::PropertyCallExpCS_BContext>(0);
}

OclParser::AssociationClassCallExpCS_BContext* OclParser::OclExpressionCSContext::associationClassCallExpCS_B() {
  return getRuleContext<OclParser::AssociationClassCallExpCS_BContext>(0);
}

OclParser::ParentedExpCSContext* OclParser::OclExpressionCSContext::parentedExpCS() {
  return getRuleContext<OclParser::ParentedExpCSContext>(0);
}

OclParser::VariableExpCSContext* OclParser::OclExpressionCSContext::variableExpCS() {
  return getRuleContext<OclParser::VariableExpCSContext>(0);
}

OclParser::LiteralExpCSContext* OclParser::OclExpressionCSContext::literalExpCS() {
  return getRuleContext<OclParser::LiteralExpCSContext>(0);
}

OclParser::LetExpCSContext* OclParser::OclExpressionCSContext::letExpCS() {
  return getRuleContext<OclParser::LetExpCSContext>(0);
}

OclParser::IfExpCSContext* OclParser::OclExpressionCSContext::ifExpCS() {
  return getRuleContext<OclParser::IfExpCSContext>(0);
}

std::vector<OclParser::OclExpressionCSContext *> OclParser::OclExpressionCSContext::oclExpressionCS() {
  return getRuleContexts<OclParser::OclExpressionCSContext>();
}

OclParser::OclExpressionCSContext* OclParser::OclExpressionCSContext::oclExpressionCS(size_t i) {
  return getRuleContext<OclParser::OclExpressionCSContext>(i);
}

tree::TerminalNode* OclParser::OclExpressionCSContext::STAR() {
  return getToken(OclParser::STAR, 0);
}

tree::TerminalNode* OclParser::OclExpressionCSContext::SLASH() {
  return getToken(OclParser::SLASH, 0);
}

tree::TerminalNode* OclParser::OclExpressionCSContext::PLUS() {
  return getToken(OclParser::PLUS, 0);
}

tree::TerminalNode* OclParser::OclExpressionCSContext::MINUS() {
  return getToken(OclParser::MINUS, 0);
}

OclParser::BinaryLiteralExpCSContext* OclParser::OclExpressionCSContext::binaryLiteralExpCS() {
  return getRuleContext<OclParser::BinaryLiteralExpCSContext>(0);
}

OclParser::OperationCallExpCS_AContext* OclParser::OclExpressionCSContext::operationCallExpCS_A() {
  return getRuleContext<OclParser::OperationCallExpCS_AContext>(0);
}

OclParser::PropertyCallExpCS_AContext* OclParser::OclExpressionCSContext::propertyCallExpCS_A() {
  return getRuleContext<OclParser::PropertyCallExpCS_AContext>(0);
}

OclParser::AssociationClassCallExpCS_AContext* OclParser::OclExpressionCSContext::associationClassCallExpCS_A() {
  return getRuleContext<OclParser::AssociationClassCallExpCS_AContext>(0);
}

OclParser::IteratorExpCSContext* OclParser::OclExpressionCSContext::iteratorExpCS() {
  return getRuleContext<OclParser::IteratorExpCSContext>(0);
}

OclParser::IterateExpCSContext* OclParser::OclExpressionCSContext::iterateExpCS() {
  return getRuleContext<OclParser::IterateExpCSContext>(0);
}

OclParser::OclMessageExpCSContext* OclParser::OclExpressionCSContext::oclMessageExpCS() {
  return getRuleContext<OclParser::OclMessageExpCSContext>(0);
}


size_t OclParser::OclExpressionCSContext::getRuleIndex() const {
  return OclParser::RuleOclExpressionCS;
}


std::any OclParser::OclExpressionCSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OclParserVisitor*>(visitor))
    return parserVisitor->visitOclExpressionCS(this);
  else
    return visitor->visitChildren(this);
}


OclParser::OclExpressionCSContext* OclParser::oclExpressionCS() {
   return oclExpressionCS(0);
}

OclParser::OclExpressionCSContext* OclParser::oclExpressionCS(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  OclParser::OclExpressionCSContext *_localctx = _tracker.createInstance<OclExpressionCSContext>(_ctx, parentState);
  OclParser::OclExpressionCSContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, OclParser::RuleOclExpressionCS, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(130);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(121);
      prefixedExp();
      break;
    }

    case 2: {
      setState(122);
      operationCallExpCS_B();
      break;
    }

    case 3: {
      setState(123);
      propertyCallExpCS_B();
      break;
    }

    case 4: {
      setState(124);
      associationClassCallExpCS_B();
      break;
    }

    case 5: {
      setState(125);
      parentedExpCS();
      break;
    }

    case 6: {
      setState(126);
      variableExpCS();
      break;
    }

    case 7: {
      setState(127);
      literalExpCS();
      break;
    }

    case 8: {
      setState(128);
      letExpCS();
      break;
    }

    case 9: {
      setState(129);
      ifExpCS();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(156);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(154);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(132);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(133);
          _la = _input->LA(1);
          if (!(_la == OclParser::STAR

          || _la == OclParser::SLASH)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(134);
          oclExpressionCS(10);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(135);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(136);
          _la = _input->LA(1);
          if (!(_la == OclParser::PLUS

          || _la == OclParser::MINUS)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(137);
          oclExpressionCS(9);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(138);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(139);
          binaryLiteralExpCS();
          setState(140);
          oclExpressionCS(7);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(142);

          if (!(precpred(_ctx, 17))) throw FailedPredicateException(this, "precpred(_ctx, 17)");
          setState(143);
          operationCallExpCS_A();
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(144);

          if (!(precpred(_ctx, 15))) throw FailedPredicateException(this, "precpred(_ctx, 15)");
          setState(145);
          propertyCallExpCS_A();
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(146);

          if (!(precpred(_ctx, 13))) throw FailedPredicateException(this, "precpred(_ctx, 13)");
          setState(147);
          associationClassCallExpCS_A();
          break;
        }

        case 7: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(148);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(149);
          iteratorExpCS();
          break;
        }
